--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Hello! I'm Riajul Islam</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Hello Dear! I'm Riajul Islam & I'm a full-stack Software Developer." />
+	<meta name="keywords" content="riajul islam, riajul, 01782320460, full-stack, application developer, software developer, programmer, web developer, web designer, wp expert, wordpress, wp theme developer, plugin developer, php developer, android developer, desktop developer, java developer, python developer, angular developer, progressive web application developer, electron developer" />
+	<meta name="author" content="https://iamriajul.github.io/" />
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+	<meta property="og:title" content="Hello there! I am Riajul Islam & I am a full-stack Software Developer."/>
+	<meta property="og:image" content="https://iamriajul.github.io/images/riajul.jpg"/>
+	<meta property="og:url" content="https://iamriajul.github.io/"/>
+	<meta property="og:site_name" content="Hello! I'm Riajul Islam"/>
+	<meta property="og:type" content="profile"/>
+	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Software Developer."/>
+	<meta name="twitter:title" content="Hello there! I am Riajul Islam & I am a full-stack Software Developer." />
+	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul.jpg" />
+	<meta name="twitter:url" content="https://iamriajul.github.io/" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -59,9 +59,9 @@
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://fb.com/iamriajul"><i class="icon-facebook2"></i></a></li>
-									<li><a href="https://twitter.com/kmriajulislami"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://twitter.com/iamriajul"><i class="icon-twitter2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/iamriajul"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://plus.google.com/+RIAJULISLAMI"><i class="icon-google-plus2"></i></a></li>
+									<li><a href="https://plus.google.com/+iamriajul"><i class="icon-google-plus2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -89,15 +89,15 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<h2>Hello Dear!</h2>
+					<p>I'm Riajul Islam, I am a Full-stack Web & Software Developer and I am carrying this experience about more than 3 years.</p>
+					<p>Currently, I'm a student & doing part-time as a freelancer Web & Software developer. I was started my programming in 2015, now I am a full-stack Application Developer. specially my carrier was started as a Web Developer since then i am doing freelancing and beside learning new technologies diving into Software development etc. specially nowadays interested in Android Application Development and doing so. I did worked as a Company's Head Web Developer. and I have also developed an Android Application as volunteer. if I talk about my hobbies that's are nothing other learning new things & technologies, I'm constantly increasing & enhancing my Skills, oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu. academics subject, i am very interested in Science specially I love Biology subject. in my Family we are only three My Mother, Father and Me :) <br>Thank you.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://fb.com/iamriajul"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://twitter.com/iamriajul"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/iamriajul"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://plus.google.com/+iamriajul"><i class="icon-google-plus2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -163,11 +163,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Willing to Accomplish High-School Graduation with Science</h3>
+									<span class="company">Kushtia Alia Madrasah - 2018 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Insha Allah(إنشاالله) i will accomplish my High-School Graduation with Science in 2019!</p>
 								</div>
 							</div>
 						</li>
@@ -175,11 +175,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">Messed-up High-School Graduation!</h3>
+									<span class="company">Kushtia Alia Madrasah - 2016 - 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Oh! i messed-up my graduation! but why? answer is I was drowned into Learning programming doing freelancing earning money etc...!</p>
 								</div>
 							</div>
 						</li>
@@ -187,11 +187,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">JDC Passed</h3>
+									<span class="company">Jugia Dakhil Madrasah - 2014 - 2015</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Passed the JDC Examination with the Result of GPA 3.95(A), 2015 is the year when i dived into programming world with HTML, CSS, Javascript and PHP</p>
 								</div>
 							</div>
 						</li>
@@ -199,11 +199,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
+									<h3 class="timeline-title">Hafez e Quran - حافظ القران</h3>
+									<span class="company">2013 - 2010  - المدرسة الصمدية</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>	إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ</p>
 								</div>
 							</div>
 						</li>
