added some content about myself 1

--- a/index.html
+++ b/index.html
@@ -86,12 +86,20 @@
 						<li><span class="first-block">Email:</span><span class="second-block">kmriajulislami@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">iamriajul.github.io</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">33 Rail Bazar Road, Jagati, Kushtia, Dhaka, Bangladesh - 7002</span></li>
+						<li><span class="first-block">Languages:</span><span class="second-block">Bengali, Arabic, English, Hindi and Urdu</span></li>
+						<li><span class="first-block">Programming-Languages:</span><span class="second-block">HTML, CSS, SASS, PHP, Javascript, Typescript, Java, Python, C#</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello Dear!</h2>
 					<p>I'm Riajul Islam, I am a Full-stack Web & Software Developer and I am carrying this experience about more than 3 years.</p>
-					<p>Currently, I'm a student & doing part-time as a freelancer Web & Software developer. I was started my programming in 2015, now I am a full-stack Application Developer. specially my carrier was started as a Web Developer since then i am doing freelancing and beside learning new technologies diving into Software development etc. specially nowadays interested in Android Application Development and doing so. I did worked as a Company's Head Web Developer. and I have also developed an Android Application as volunteer. if I talk about my hobbies that's are nothing other learning new things & technologies, I'm constantly increasing & enhancing my Skills, oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu. academics subject, i am very interested in Science specially I love Biology subject. in my Family we are only three My Mother, Father and Me :) <br>Thank you.</p>
+					<p>Currently, I'm a student & doing part-time as a freelancer Web & Software developer. I was started my programming in 2015, now I am a full-stack Application Developer.<br>
+						My carrier was started as a Web Developer since then i am doing freelancing and beside learning new technologies & diving into Software development etc. specially nowadays interested in Android Application Development and doing so.<br>
+						I did worked as a Company's Head Web Developer. and I have also developed an Android Application as volunteer.<br>
+						if I talk about my hobbies that's are nothing other learning new things & technologies, I'm constantly increasing & enhancing my Skills,<br>
+						oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu.<br>
+						in My academics subject, i am very interested in Science specially I love Biology subject. <br>in my Family we are only three My Mother, Father and Me :)<br><br>
+						Thank you.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://fb.com/iamriajul"><i class="icon-facebook3"></i></a></li>
@@ -203,7 +211,7 @@
 									<span class="company">2013 - 2010  - المدرسة الصمدية</span>
 								</div>
 								<div class="timeline-body">
-									<p>	إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ</p>
+									<p> إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ <br> (Quran Al-Hijr/9) Translation: We have, without doubt, sent down the Message; and We will assuredly guard it (from corruption).</p>
 								</div>
 							</div>
 						</li>
