added some content about myself 2

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<span class="company">Freelancing - 2017 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Become a super learner!, Got an job as Company's Head Web Developer. did an Android Application projects as volunteer. started Publishing to Playstore. accomplished many in things in software development.</p>
 								</div>
 							</div>
 						</li>
@@ -143,10 +143,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<span class="company">Freelancing - 2016/October</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Started learning Android Application Development. in 2016 finished many web projects and earned quite good money!.</p>
 								</div>
 							</div>
 						</li>
@@ -154,11 +154,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Got my first Web Project!</h3>
+									<span class="company">from Jessore District - 2016/February</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In this project i was ordered to build an E-Commerce website with Wordpress & WooCommerce, I did all things good except Design, design wasn't quite good.</p>
 								</div>
 							</div>
 						</li>
@@ -175,7 +175,7 @@
 									<span class="company">Kushtia Alia Madrasah - 2018 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Insha Allah(إنشاالله) i will accomplish my High-School Graduation with Science in 2019!</p>
+									<p>Insha Allah(إنشا الله) i will accomplish my High-School Graduation with Science in 2019!</p>
 								</div>
 							</div>
 						</li>
@@ -208,10 +208,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Hafez e Quran - حافظ القران</h3>
-									<span class="company">2013 - 2010  - المدرسة الصمدية</span>
+									<span class="company">2013 <- 2010  - المدرسة الصمدية</span>
 								</div>
 								<div class="timeline-body">
-									<p> إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ <br> (Quran Al-Hijr/9) Translation: We have, without doubt, sent down the Message; and We will assuredly guard it (from corruption).</p>
+									<p> إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ (Quran Al-Hijr/9)<br> We have, without doubt, sent down the Message; and We will assuredly guard it (from corruption).</p>
 								</div>
 							</div>
 						</li>
@@ -238,7 +238,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Designing a web is quite difficult if that's need to be unique, but i always try to do my best.</p>
 							</div>
 						</div>
 					</div>
@@ -249,8 +249,8 @@
 								<i class="icon-briefcase"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Branding</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Web Development</h3>
+								<p>Developing/Back-End Development is that where i'm very expert. i don't think how critical algorithm is, i'm always ready go!</p>
 							</div>
 						</div>
 
@@ -261,8 +261,8 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Profiling and Auditing</h3>
+								<p>I really don't think it's out of any web or software development project, i'm quite good at.</p>
 							</div>
 						</div>
 					</div>
@@ -277,8 +277,8 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Developent</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Android Application Development</h3>
+								<p>I do both Designing(XML) and Back-End Java, I follow Material design guided by Google. I always concern about performance and app size. many of users cancel their app installation because the downloading time!</p>
 							</div>
 						</div>
 
@@ -290,8 +290,8 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Marketing</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<h3>Desktop Application Development</h3>
+								<p>I did not have any Project with this, but if you want me to get started with this then, you can hire me. In this field i know quite good technologies that i can work with such as Java & JavaFX or C#, or with Electron Framework.</p>
 							</div>
 						</div>
 
@@ -303,7 +303,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Support</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Supporting clients is bonding with clients. I always try to support my clients as best i can.</p>
 							</div>
 						</div>
 					</div>
@@ -321,26 +321,25 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="95"><span><strong>HTML5</strong>98%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="93"><span><strong>CSS3</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="90"><span><strong>jQuery</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+					<div class="chart" data-percent="89"><span><strong>PHP</strong>99%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="85"><span><strong>MySQL</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Angular</strong>80%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="85"><span><strong>Javascript/Typescript</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
