--- a/index.html
+++ b/index.html
@@ -321,28 +321,42 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>98%</span></div>
+					<div class="chart" data-percent="98"><span><strong>HTML5, XML</strong>98%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>CSS3</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>75%</span></div>
+					<div class="chart" data-percent="75"><span><strong>MySQL</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>99%</span></div>
+					<div class="chart" data-percent="99"><span><strong>PHP</strong>99%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="50"><span><strong>jQuery</strong>50%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>75%</span></div>
+					<div class="chart" data-percent="80"><span><strong>Angular</strong>80%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Angular</strong>80%</span></div>
+					<div class="chart" data-percent="75"><span><strong>Javascript</strong>75%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Javascript/Typescript</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Typescript</strong>90%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="50"><span><strong>Python</strong>50%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="60"><span><strong>Kotlin</strong>60%</span></div>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="50"><span><strong>C#</strong>50%</span></div>
 				</div>
 			</div>
 			<div class="row">
