--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<meta name="author" content="https://iamriajul.github.io/" />
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Hello there! I am Riajul Islam & I am a full-stack Software Developer."/>
-	<meta property="og:image" content="https://iamriajul.github.io/images/riajul.jpg"/>
+	<meta property="og:title" content="Hello! I'm Riajul Islam"/>
+	<meta property="og:image" content="https://iamriajul.github.io/images/riajul-squre.png"/>
 	<meta property="og:url" content="https://iamriajul.github.io/"/>
 	<meta property="og:site_name" content="Hello! I'm Riajul Islam"/>
 	<meta property="og:type" content="profile"/>
 	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Software Developer."/>
-	<meta name="twitter:title" content="Hello there! I am Riajul Islam & I am a full-stack Software Developer." />
+	<meta name="twitter:title" content="Hello! I'm Riajul Islam" />
 	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul.jpg" />
 	<meta name="twitter:url" content="https://iamriajul.github.io/" />
 
