--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Hello! I'm Riajul Islam</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Hello Dear! I'm Riajul Islam & I'm a full-stack Software Developer." />
+	<meta name="description" content="Hello Dear! I'm Riajul Islam & I'm a full-stack Web & Software Developer." />
 	<meta name="keywords" content="riajul islam, riajul, 01782320460, full-stack, application developer, software developer, programmer, web developer, web designer, wp expert, wordpress, wp theme developer, plugin developer, php developer, android developer, desktop developer, java developer, python developer, angular developer, progressive web application developer, electron developer" />
 	<meta name="author" content="https://iamriajul.github.io/" />
 
@@ -15,7 +15,7 @@
 	<meta property="og:url" content="https://iamriajul.github.io/"/>
 	<meta property="og:site_name" content="Hello! I'm Riajul Islam"/>
 	<meta property="og:type" content="profile"/>
-	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Software Developer."/>
+	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Web & Software Developer."/>
 	<meta name="twitter:title" content="Hello! I'm Riajul Islam" />
 	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul.jpg" />
 	<meta name="twitter:url" content="https://iamriajul.github.io/" />
@@ -347,7 +347,7 @@
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>Python</strong>50%</span></div>
+					<div class="chart" data-percent="40"><span><strong>Python</strong>40%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
@@ -356,7 +356,7 @@
 					<div class="chart" data-percent="60"><span><strong>Kotlin</strong>60%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="50"><span><strong>C#</strong>50%</span></div>
+					<div class="chart" data-percent="40"><span><strong>C#</strong>40%</span></div>
 				</div>
 			</div>
 			<div class="row">
