og twitter img changed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:type" content="profile"/>
 	<meta property="og:description" content="Hello there! I'm Riajul Islam & I'm a full-stack Web & Software Developer."/>
 	<meta name="twitter:title" content="Hello! I'm Riajul Islam" />
-	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul.jpg" />
+	<meta name="twitter:image" content="https://iamriajul.github.io/images/riajul-squre.png" />
 	<meta name="twitter:url" content="https://iamriajul.github.io/" />
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
