--- a/index.html
+++ b/index.html
@@ -622,7 +622,9 @@
 		</div>
 	</div>
 
-	<div id="map" class="fh5co-map"></div>
+	<div id="map" class="fh5co-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d797.9751490290877!2d89.0992568291839!3d23.89364299903246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjPCsDUzJzM3LjEiTiA4OcKwMDUnNTkuMyJF!5e1!3m2!1sen!2sus!4v1511156420465" style="border:0;height: 100%;width: 100%;" allowfullscreen="" frameborder="0"></iframe>
+    </div>
 	</div>
 	
 	<div id="fh5co-footer">
@@ -653,7 +655,7 @@
 	<script src="js/jquery.easypiechart.min.js"></script>
 	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
+	<!--<script src="js/google_map.js"></script>-->
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
