--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 		</div>
 	</div>
 
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116689.98638321518!2d89.03849220383552!3d23.909298343895948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjPCsDUzJzM3LjEiTiA4OcKwMDUnNTkuMyJF!5e0!3m2!1sen!2sus!4v1511156780942" style="overflow: hidden;border:0;height: 500px;width: 100%;" allowfullscreen="" frameborder="0"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d116689.98638321518!2d89.03849220383552!3d23.909298343895948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjPCsDUzJzM3LjEiTiA4OcKwMDUnNTkuMyJF!5e0!3m2!1sen!2sus!4v1511156780942" width="800" height="600" frameborder="0" style="overflow: hidden;border:0;height: 500px;width: 100%;" allowfullscreen></iframe>
 	</div>
 	
 	<div id="fh5co-footer">
