ecommerce service added

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<li><span class="first-block">Website:</span><span class="second-block">iamriajul.github.io</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">33 Rail Bazar Road, Jagati, Kushtia, Dhaka, Bangladesh - 7002</span></li>
 						<li><span class="first-block">Languages:</span><span class="second-block">Bengali, Arabic, English, Hindi and Urdu</span></li>
-						<li><span class="first-block">Programming-Languages:</span><span class="second-block">HTML, CSS, SASS, PHP, Javascript, Typescript, Java, Python, C#</span></li>
+						<li><span class="first-block">Programming Languages:</span><span class="second-block">HTML, CSS, SASS, PHP, Javascript, Typescript, Java, Python, C#</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
@@ -175,7 +175,7 @@
 									<span class="company">Kushtia Alia Madrasah - 2018 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Insha Allah(إنشا الله) i will accomplish my High-School Graduation with Science in 2019!</p>
+									<p>In sha Allah(ان شاء الله) i will accomplish my High-School Graduation with Science in 2019!</p>
 								</div>
 							</div>
 						</li>
@@ -250,7 +250,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Web Development</h3>
-								<p>Developing/Back-End Development is that where i'm very expert. i don't think how critical algorithm is, i'm always ready go!</p>
+								<p>Developing/Back-End Development is that where i'm very expert. i don't think how critical algorithm is, i'm always ready to go!</p>
 							</div>
 						</div>
 
@@ -261,8 +261,8 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Profiling and Auditing</h3>
-								<p>I really don't think it's out of any web or software development project, i'm quite good at.</p>
+								<h3>E-Commerce Development</h3>
+								<p>Nowadays E-Commerce getting so popular and i'm doing so well with it. i'm always ready to go with it!</p>
 							</div>
 						</div>
 					</div>
