--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									<span class="company">Kushtia Alia Madrasah - 2018 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>In sha Allah(ان شاء الله) i will accomplish my High-School Graduation with Science in 2019!</p>
+									<p>In sha Allah(إن شاء الله) i will accomplish my High-School Graduation with Science in 2019!</p>
 								</div>
 							</div>
 						</li>
@@ -211,7 +211,7 @@
 									<span class="company">2013 <- 2010  - المدرسة الصمدية</span>
 								</div>
 								<div class="timeline-body">
-									<p> إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ (Quran Al-Hijr/9)<br> We have, without doubt, sent down the Message; and We will assuredly guard it (from corruption).</p>
+									<p> إِنَّا نَحْنُ نَزَّلْنَا الذِّكْرَ وَإِنَّا لَهُ لَحَافِظُونَ (Al-Quran Al-Hijr/9)<br> We have, without doubt, sent down the Message; and We will assuredly guard it (from corruption).</p>
 								</div>
 							</div>
 						</li>
@@ -246,7 +246,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-briefcase"></i>
+								<i class="icon-fire"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Web Development</h3>
@@ -258,7 +258,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-search"></i>
+								<i class="icon-database"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>E-Commerce Development</h3>
@@ -274,7 +274,7 @@
 
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-bargraph"></i>
+								<i class="icon-android"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Android Application Development</h3>
@@ -287,7 +287,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-genius"></i>
+								<i class="icon-desktop"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Desktop Application Development</h3>
