link target fix

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<h3><span>Web, Desktop, Mobile Applications Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://fb.com/iamriajul"><i class="icon-facebook2"></i></a></li>
-									<li><a href="https://twitter.com/iamriajul"><i class="icon-twitter2"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/iamriajul"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://plus.google.com/+iamriajul"><i class="icon-google-plus2"></i></a></li>
+									<li><a href="https://fb.com/iamriajul" target="_blank"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://twitter.com/iamriajul" target="_blank"><i class="icon-twitter2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/iamriajul" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://plus.google.com/+iamriajul" target="_blank"><i class="icon-google-plus2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -102,10 +102,10 @@
 						Thank you.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://fb.com/iamriajul"><i class="icon-facebook3"></i></a></li>
-							<li><a href="https://twitter.com/iamriajul"><i class="icon-twitter2"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/iamriajul"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="https://plus.google.com/+iamriajul"><i class="icon-google-plus2"></i></a></li>
+							<li><a href="https://fb.com/iamriajul" target="_blank"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://twitter.com/iamriajul" target="_blank"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/iamriajul" target="_blank"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://plus.google.com/+iamriajul" target="_blank"><i class="icon-google-plus2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -245,7 +245,7 @@
 
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
-							<span class="icon">
+                            <span class="icon">
 								<i class="icon-fire"></i>
 							</span>
 							<div class="feature-copy">
