--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 					<p>Currently, I'm a student & doing part-time as a freelancer Web & Software developer. I was started my programming in 2015, now I am a full-stack Application Developer.<br>
 						My carrier was started as a Web Developer since then i am doing freelancing and beside learning new technologies & diving into Software development etc. specially nowadays interested in Android Application Development and doing so.<br>
 						I did worked as a Company's Head Web Developer. and I have also developed an Android Application as volunteer.<br>
-						if I talk about my hobbies that's are nothing other learning new things & technologies, I'm constantly increasing & enhancing my Skills,<br>
-						oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu.<br>
+						if I talk about my hobbies that's are nothing other than learning new things & technologies and fishing!, nowadays i'm not very interested in fishing but i would like to have in feature.<br>
+						Day by day I'm constantly increasing & enhancing my Skills.<br>
+						Oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu.<br>
 						in My academics subject, i am very interested in Science specially I love Biology subject. <br>in my Family we are only three My Mother, Father and Me :)<br><br>
 						Thank you.</p>
 					<p>
