emoji added in about me

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						if I talk about my hobbies that's are nothing other than learning new things & technologies and fishing!, nowadays i'm not very interested in fishing but i would like to have in feature.<br>
 						Day by day I'm constantly increasing & enhancing my Skills.<br>
 						Oh! one thing i missed that I also like to learn new Spoken language(Human-Language) currently, i know Bengali, Arabic, English, Hindi and Urdu.<br>
-						in My academics subject, i am very interested in Science specially I love Biology subject. <br>in my Family we are only three My Mother, Father and Me :)<br><br>
+						in My academics subject, i am very interested in Science specially I love Biology subject. <br>in my Family we are only three My Mother, Father and Me <i class="icon-emoji-happy"></i><br><br>
 						Thank you.</p>
 					<p>
 						<ul class="fh5co-social-icons">
