android service des fix

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Android Application Development</h3>
-								<p>I do both Designing(XML) and Back-End Java, I follow Material design guided by Google. I always concern about performance and app size. many of users cancel their app installation because the downloading time!</p>
+								<p>I do both Designing(XML) and Back-End Java, I follow Material design guided by Google. I always aware/concern about performance and app size. many of users cancel their app installation because the downloading time!</p>
 							</div>
 						</div>
 
