added playstore page & bangla quran app

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 									<li><a href="https://www.linkedin.com/in/iamriajul" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://plus.google.com/+iamriajul" target="_blank"><i class="icon-google-plus2"></i></a></li>
 								</ul>
+                                <a href="http://play.google.com/store/apps/dev?id=7770433443794211141" target="_blank"><img src="images/google-play.png" alt="Google PlayStore page"></a>
+                                <a href="https://play.google.com/store/apps/details?id=com.alquranbd.alquranbd" target="_blank"><img src="images/bangla-quran.png" alt="Bangla Quran App on PlayStore"></a>
+
 							</p>
 						</div>
 					</div>
