--- a/index.html
+++ b/index.html
@@ -445,12 +445,10 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/work/bangla_quran_promo.jpg);">
+					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
-							<h3>Bangla Quran Android App</h3>
-							<span>
-								<a href="https://play.google.com/store/apps/details?id=com.alquranbd.alquranbd" target="_blank"><img src="images/google-play.png" alt="Bangla Quran App on PlayStore"></a>
-							</span>
+							<h3>Project Name</h3>
+							<span>Illustration</span>
 						</div>
 					</a>
 				</div>
