Bangla Quran Android App added

--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/work/bangla_quran_promo.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Bangla Quran Android App</h3>
+							<span><img src="images/google-play.png" alt="Bangla Quran on PlayStore"></span>
 						</div>
 					</a>
 				</div>
