--- a/index.html
+++ b/index.html
@@ -445,18 +445,18 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/work/bangla_quran_promo.jpg);">
-						<div class="desc">
+					<a href="https://play.google.com/store/apps/details?id=com.alquranbd.alquranbd" target="_blank" class="work" style="background-image: url(images/work/bangla_quran_promo.jpg);">
+						<div class="desc" style="background: #ffffffb3;">
 							<h3>Bangla Quran Android App</h3>
 							<span><img src="images/google-play.png" alt="Bangla Quran on PlayStore"></span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.urduqaidabangla" target="_blank" class="work" style="background-image: url(images/work/urdu_qaida_promo.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>উর্দু কায়দা Android App</h3>
+							<span><img src="images/google-play.png" alt="Bangla Quran on PlayStore"></span>
 						</div>
 					</a>
 				</div>
