উর্দু কি পহেলী কিতাব Android App added

--- a/index.html
+++ b/index.html
@@ -456,15 +456,15 @@
 					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.urduqaidabangla" target="_blank" class="work" style="background-image: url(images/work/urdu_qaida_promo.jpg);">
 						<div class="desc" style="background: #ffffffbd;">
 							<h3>উর্দু কায়দা Android App</h3>
-							<span><img src="images/google-play.png" alt="Bangla Quran on PlayStore"></span>
+							<span><img src="images/google-play.png" alt="উর্দু কায়দা on PlayStore"></span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.urdukipehlikitab" target="_blank" class="work" style="background-image: url(images/portfolio-3.jpg);">
+						<div class="desc" style="background: #ffffffbd;">
+							<h3>উর্দু কি পহেলী কিতাব Android App</h3>
+							<span><img src="images/google-play.png" alt="উর্দু কি পহেলী কিতাব on PlayStore"></span>
 						</div>
 					</a>
 				</div>
