--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.urdukipehlikitab" target="_blank" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.urdukipehlikitab" target="_blank" class="work" style="background-image: url(images/work/urdu_ki_pehli_kitab_promo.jpg);">
 						<div class="desc" style="background: #ffffffbd;">
 							<h3>উর্দু কি পহেলী কিতাব Android App</h3>
 							<span><img src="images/google-play.png" alt="উর্দু কি পহেলী কিতাব on PlayStore"></span>
