Contact Image added

--- a/index.html
+++ b/index.html
@@ -576,15 +576,15 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+					<p>Are you thinking about your new Project? just feel free to contact me!</p>
+					<p><a href="https://www.facebook.com/iamriajul" target="_blank" class="btn btn-default btn-lg">Contact Me</a></p>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/riajul.jpg.jpg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
