fixed Contact Image

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Are you thinking about your new Project? just feel free to contact me!</p>
+					<p>Are you thinking about your new Project? just feel free to Contact Me!</p>
 					<p><a href="https://www.facebook.com/iamriajul" target="_blank" class="btn btn-default btn-lg">Contact Me</a></p>
 				</div>
 			</div>
@@ -584,7 +584,7 @@
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/riajul.jpg.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/riajul.jpg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
