--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hello! I'm Riajul Islam</title>
+	<title>Hello! I'm Riajul Islam - Professional Applications Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Hello Dear! I'm Riajul Islam & I'm a full-stack Web & Software Developer." />
 	<meta name="keywords" content="riajul islam, riajul, 01782320460, full-stack, application developer, software developer, programmer, web developer, web designer, wp expert, wordpress, wp theme developer, plugin developer, php developer, android developer, desktop developer, java developer, python developer, angular developer, progressive web application developer, electron developer" />
