--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Desktop Application Development</h3>
-								<p>I did not have any Project with this, but if you want me to get started with this then, you can hire me. In this field i know quite good technologies that i can work with such as Java & JavaFX or C#, or with Electron Framework.</p>
+								<p>I did not have any Project with this, but if you want me to get started with this then, you can hire me. In this field i know quite good technologies that i can work with such as Java & JavaFX or C#, PyQt5 or with Electron Framework.</p>
 							</div>
 						</div>
 
