added Stackoverflow flair widget

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 								</ul>
                                 <a href="http://play.google.com/store/apps/dev?id=7770433443794211141" target="_blank"><img src="images/google-play.png" alt="Google PlayStore page"></a>
                                 <a href="https://play.google.com/store/apps/details?id=com.alquranbd.alquranbd" target="_blank"><img src="images/bangla-quran.png" alt="Bangla Quran App on PlayStore"></a>
-
+								<a href="https://stackoverflow.com/users/7033983/riajul">
+									<img src="https://stackoverflow.com/users/flair/7033983.png" width="208" height="58" alt="profile for Riajul at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Riajul at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+								</a>
 							</p>
 						</div>
 					</div>
