--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Android Application Development</h3>
-								<p>I do both Designing(XML) and Back-End Java, I follow Material design guided by Google. I always aware/concern about performance and app size. many of users cancel their app installation because the downloading time!</p>
+								<p>I do both Designing(XML) and Back-End Java/Kotlin, I follow Material design guided by Google. I always aware/concern about performance and app size. many of users cancel their app installation because the downloading time!</p>
 							</div>
 						</div>
 
@@ -506,6 +506,14 @@
 						</div>
 					</a>
 				</div>
+                <div class="col-md-3 text-center col-padding animate-box">
+                    <a href="https://hasbd.com" target="_blank" class="work" style="background-image: url(images/work/hasbd_promo.jpg);">
+                        <div class="desc">
+                            <h3>Web Developer at HASBD</h3>
+                            <span><img src="images/work/hasbd_logo.png" alt="HASBD"></span>
+                        </div>
+                    </a>
+                </div>
 				<!--<div class="col-md-3 text-center col-padding animate-box">-->
 					<!--<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">-->
 						<!--<div class="desc">-->
