--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
 				<div class="row form-group">
 					<div class="col-md-12">
-						<textarea name="Message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+						<textarea name="Message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something..."></textarea>
 					</div>
 				</div>
 				<div class="form-group">
