--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.thousandsunnahbengali" target="_blank" class="work" style="background-image: url(images/work/thousandsunnahbengali_promo.jpg);">
-						<div class="desc">
+						<div class="desc" style="background: #ffffffbd;">
 							<h3>১০০০ সুন্নাত Android App</h3>
 							<span><img src="images/google-play.png" alt="১০০০ সুন্নাত on PlayStore"></span>
 						</div>
@@ -508,7 +508,7 @@
 				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
                     <a href="https://hasbd.com" target="_blank" class="work" style="background-image: url(images/work/hasbd_promo.jpg);">
-                        <div class="desc">
+                        <div class="desc" style="background: #ffffffbd;">
                             <h3>Web Developer at HASBD</h3>
                             <span><img src="images/work/hasbd_logo.png" alt="HASBD"></span>
                         </div>
