added 1000 Sunnah English added.

--- a/index.html
+++ b/index.html
@@ -506,6 +506,14 @@
 						</div>
 					</a>
 				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="https://play.google.com/store/apps/details?id=io.github.iamriajul.thousandsunnahenglish" target="_blank" class="work" style="background-image: url(images/work/thousandsunnahenglish_promo.png);">
+						<div class="desc" style="background: #ffffffbd;">
+							<h3>1000 Sunnah Android App</h3>
+							<span><img src="images/google-play.png" alt="1000 Sunnah on PlayStore"></span>
+						</div>
+					</a>
+				</div>
                 <div class="col-md-3 text-center col-padding animate-box">
                     <a href="https://hasbd.com" target="_blank" class="work" style="background-image: url(images/work/hasbd_promo.jpg);">
                         <div class="desc" style="background: #ffffffbd;">
