--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 					<div class="chart" data-percent="90"><span><strong>CSS3</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="75"><span><strong>MySQL</strong>75%</span></div>
+					<div class="chart" data-percent="75"><span><strong>MySQL</strong>98%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="99"><span><strong>PHP</strong>99%</span></div>
@@ -379,7 +379,7 @@
 					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="60"><span><strong>Kotlin</strong>60%</span></div>
+					<div class="chart" data-percent="60"><span><strong>Kotlin</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="40"><span><strong>C#</strong>40%</span></div>
@@ -449,7 +449,7 @@
 						<h3><span class="name-left">Android Application Development</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
@@ -519,6 +519,14 @@
                         <div class="desc" style="background: #ffffffbd;">
                             <h3>Web Developer at HASBD</h3>
                             <span><img src="images/work/hasbd_logo.png" alt="HASBD"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3 text-center col-padding animate-box">
+                    <a href="https://play.google.com/store/apps/details?id=com.apsbiman.muttakin.trms" target="_blank" class="work" style="background-image: url(images/work/apsbiman_promo.png);">
+                        <div class="desc" style="background: #ffffffbd;">
+                            <h3>ApsBiman TRMS Android App<br><small>Lead Developer at Excellent-IT</small></h3>
+							<span><img src="images/google-play.png" alt="1000 Sunnah on PlayStore"></span>
                         </div>
                     </a>
                 </div>
